# ShardsOfAether-RustPoject

./: .gitignore  Cargo.toml  README.md  TODO.md  save.json
assets/: _items.json  enemies.json  items.json  level1.json  level2.json  sanctum.json  tutorial.json  world.json
src/: colors.rs  combat.rs  commands.rs  enemies.rs  items.rs  main.rs  player.rs  save_load.rs  storage.rs  utils.rs  world.rs
