[package]
name = "shards_of_aether"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "A text adventure RPG prototype built in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/SafiaNassiri/ShardsOfAether-RustPoject"
homepage = "https://github.com/SafiaNassiri/ShardsOfAether-RustPoject"
keywords = ["text", "adventure", "game", "rpg"]
categories = ["games", "command-line-utilities"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
colored = "2.0"
itertools = "0.12"