[package]
name = "shards_of_aether"
version = "0.1.2"
edition = "2021"
authors = ["Safia Nassiri <youremail@example.com>"]
description = "A text-based adventure RPG built in Rust."
license = "MIT"
repository = "https://github.com/SafiaNassiri/ShardsOfAether-RustPoject"
readme = "README.md"
keywords = ["game", "rpg", "text-adventure", "cli"]
categories = ["games", "command-line-utilities"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
colored = "2.0"
itertools = "0.12"